# verifier

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: ci.yml  fuzz.yml  publish.yml  release.yml  wasm-gate.yml
bindings/browser/: browser.d.ts  browser.js
bindings/go/: go.mod  verifier.go
bindings/node/: node.d.ts  node.js
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/stogas_verifier/: __init__.py
bindings/python/src/: lib.rs
bindings/wasm/: worker.d.ts  worker.js
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  proxy.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/offline-sigstore/: Cargo.toml
crates/offline-sigstore-wasm/: Cargo.toml
crates/offline-sigstore-wasm/src/: lib.rs
crates/offline-sigstore/src/: crypto.rs  lib.rs  sct.rs  sigstore.rs  strict_json.rs  tlog.rs  trust_root.rs  trusted_root.json  tsa.rs
crates/offline-sigstore/tests/: github_fixture.rs  native_differential.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs  types.rs
crates/verifier/tests/: staging_bundle.rs
crates/verifier/tests/fixtures/: staging-bundle-sequence-1927.json
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bundle_x509_snp_drand.rs  c_abi.rs  heartbeat_admission.rs  sigstore.rs
go/: go.mod  verifier.go  verifier_nocgo.go  verifier_test.go
include/: stogas_verifier.h
scripts/: package-npm.mjs
tests/browser/: playwright.config.ts  verifier.spec.ts
tests/fixtures/: gateway-v0.0.1-attestation.jsonl  gateway-v0.0.1-launch-policy.json  gateway-v0.0.1-signature.json  github-rfc3161-sha384.json  github-rfc3161-trusted-root.json
tests/node/: offline-sigstore.test.mjs  verifier.test.mjs
