[workspace]
members = [
  "bindings/python",
  "crates/cli",
  "crates/ffi",
  "crates/offline-sigstore",
  "crates/verifier",
  "crates/wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.97.1"
license = "Apache-2.0"
repository = "https://github.com/StogasAI/verifier"

[workspace.dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false, features = ["serde", "std"] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["pkcs8"] }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
sha2 = "0.10.9"
thiserror = "2.0.16"
zeroize = "1.8.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
