[package]
name = "stogas-verifier-python"
description = "Python bindings for stogas-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_stogas_verifier"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["abi3-py310", "extension-module"] }
serde_json.workspace = true
stogas-verifier = { path = "../../crates/verifier" }

[lints]
workspace = true

