[package]
name = "stogas-verify"
description = "Offline Stogas bundle verifier and loopback proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "stogas-verify"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
directories = "6.0.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = ["http2", "json", "rustls-tls-webpki-roots", "stream"] }
serde.workspace = true
serde_json.workspace = true
stogas-verifier = { path = "../verifier" }
tokio = { version = "1.47.1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "time"] }

[lints]
workspace = true

