[package]
name = "stogas-verify"
description = "Offline Stogas bundle verifier and loopback proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "stogas-verify"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
clap = { version = "4.5.47", features = ["derive"] }
directories = "6.0.0"
futures-util = "0.3.31"
hex.workspace = true
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = ["http2", "json", "rustls-tls-webpki-roots", "stream"] }
rustls = { version = "0.23.32", default-features = false, features = ["ring", "std", "tls12"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
stogas-verifier = { path = "../verifier" }
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
url = "2.5.7"
webpki-roots = "1.0.2"
x509-parser = { version = "0.18.0", default-features = false }

[dev-dependencies]
rcgen = "0.14.4"
tokio-rustls = "0.26.4"

[lints]
workspace = true
