[package]
name = "stogas-verifier-ffi"
description = "Bounded C ABI for stogas-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
stogas-verifier = { path = "../verifier" }

[lints]
workspace = true

