[package]
name = "stogas-verifier-ffi"
description = "Bounded C ABI for stogas-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
stogas-verifier = { path = "../verifier" }

[lints.rust]
missing_docs = "allow"
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
