[package]
name = "stogas-verifier"
description = "Offline verifier for Stogas confidential-gateway trust bundles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["snp"]
snp = ["dep:sev", "dep:x509-parser"]

[dependencies]
base64.workspace = true
chrono.workspace = true
drand-verify = { version = "0.6.2", default-features = false }
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sev = { version = "8.0.0", default-features = false, features = ["crypto_nossl", "snp"], optional = true }
sha2.workspace = true
stogas-offline-sigstore = { path = "../offline-sigstore" }
thiserror.workspace = true
x509-parser = { version = "0.18.0", features = ["verify"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
