[package]
name = "stogas-verifier-wasm"
description = "WebAssembly bindings for stogas-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.78"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom-02 = { package = "getrandom", version = "0.2.17", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
stogas-verifier = { path = "../verifier", default-features = false, features = ["snp"] }
wasm-bindgen = "0.2.101"

[lints]
workspace = true
